Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34296

Qt installer is not accessible

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0 RC1
    • 5.2.0
    • Packaging & Installer
    • None
    • All

      The installer is not accessible, so it doesn't work with screen readers.
      I will help getting it working, so feel free to contact me.

      The only thing needed is adding the qtaccessiblewidgets plugin to the installer framework. I'm not quite sure about Qt 4 vs. 5, I tested with Qt 5 and it works there.
      https://codereview.qt-project.org/69028

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            iknd Iikka Eklund
            frederik Frederik Gladhorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes