Build installers with accessibility plugin

This change makes the installers work with screen readers.

Task-number: QTBUG-34296
Change-Id: I87cf313657d9eaa31f4cd89729b4e298880ae99e
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>